remove warnings from the notebook

--- a/examples/fcx1_wake_sleep_classification.ipynb
+++ b/examples/fcx1_wake_sleep_classification.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/disk/local/misc_venv/lib/python3.7/site-packages/statsmodels/compat/pandas.py:49: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
-      "  data_klasses = (pandas.Series, pandas.DataFrame, pandas.Panel)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pylab as p\n",
     "import numpy as np\n",
@@ -33,7 +24,10 @@
     "\n",
     "from dataset_adapters import fcx1_dataset\n",
     "\n",
-    "mpladeq.beautify_mpl()"
+    "mpladeq.beautify_mpl()\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -75,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +108,7 @@
        "Text(0, 0.5, 'ISI value, ms')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -141,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,15 +152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Feature Extraction: 100%|██████████| 40/40 [00:01<00:00, 29.89it/s]\n",
-      "Feature Extraction: 100%|██████████| 40/40 [00:01<00:00, 25.82it/s]\n"
+      "Feature Extraction: 100%|██████████| 40/40 [00:01<00:00, 30.33it/s]\n",
+      "Feature Extraction: 100%|██████████| 40/40 [00:01<00:00, 31.02it/s]\n"
      ]
     }
    ],
@@ -178,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +187,7 @@
        "                       warm_start=False)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,16 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'AUC-ROC score: 0.6139726885333311'"
+       "'AUC-ROC score: 0.6489382738904153'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -270,104 +264,104 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
+       "      <th>15</th>\n",
        "      <td>value__quantile__q_0.1</td>\n",
-       "      <td>0.068087</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>value__quantile__q_0.30000000000000004</td>\n",
-       "      <td>0.060425</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>value__quantile__q_0.2</td>\n",
-       "      <td>0.060389</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>value__quantile__q_0.9</td>\n",
-       "      <td>0.055770</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>value__standard_deviation</td>\n",
-       "      <td>0.055022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>value__variance</td>\n",
-       "      <td>0.053394</td>\n",
+       "      <td>0.067401</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>value__quantile__q_0.4</td>\n",
-       "      <td>0.047285</td>\n",
+       "      <td>value__quantile__q_0.2</td>\n",
+       "      <td>0.062246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>value__variance</td>\n",
+       "      <td>0.055417</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>value__abs_energy</td>\n",
-       "      <td>0.046748</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>value__maximum</td>\n",
-       "      <td>0.045761</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>value__minimum</td>\n",
-       "      <td>0.043463</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>value__quantile__q_0.8</td>\n",
-       "      <td>0.041733</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>value__quantile__q_0.5</td>\n",
-       "      <td>0.040282</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>value__median</td>\n",
-       "      <td>0.039267</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>value__skewness</td>\n",
-       "      <td>0.037424</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>value__quantile__q_0.7000000000000001</td>\n",
-       "      <td>0.037370</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>value__sum_values</td>\n",
-       "      <td>0.037204</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>value__count_above_mean</td>\n",
-       "      <td>0.036372</td>\n",
+       "      <td>value__quantile__q_0.30000000000000004</td>\n",
+       "      <td>0.054141</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
-       "      <td>value__quantile__q_0.6</td>\n",
-       "      <td>0.036175</td>\n",
+       "      <td>value__standard_deviation</td>\n",
+       "      <td>0.052977</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>value__kurtosis</td>\n",
-       "      <td>0.033892</td>\n",
+       "      <th>31</th>\n",
+       "      <td>value__minimum</td>\n",
+       "      <td>0.052758</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>value__maximum</td>\n",
+       "      <td>0.048261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>value__quantile__q_0.4</td>\n",
+       "      <td>0.044904</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>value__quantile__q_0.9</td>\n",
+       "      <td>0.044598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>value__quantile__q_0.8</td>\n",
+       "      <td>0.043224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>value__abs_energy</td>\n",
+       "      <td>0.042800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>value__mean</td>\n",
-       "      <td>0.033492</td>\n",
+       "      <td>0.039838</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>value__sum_values</td>\n",
+       "      <td>0.039415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>value__quantile__q_0.5</td>\n",
+       "      <td>0.038433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>value__quantile__q_0.6</td>\n",
+       "      <td>0.037662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>value__median</td>\n",
+       "      <td>0.037317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>value__quantile__q_0.7000000000000001</td>\n",
+       "      <td>0.037221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>value__skewness</td>\n",
+       "      <td>0.036348</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>value__kurtosis</td>\n",
+       "      <td>0.035703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>value__count_above_mean</td>\n",
+       "      <td>0.032605</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -375,29 +369,29 @@
       ],
       "text/plain": [
        "                                   feature  importance_score\n",
-       "21                  value__quantile__q_0.1          0.068087\n",
-       "18  value__quantile__q_0.30000000000000004          0.060425\n",
-       "13                  value__quantile__q_0.2          0.060389\n",
-       "14                  value__quantile__q_0.9          0.055770\n",
-       "23               value__standard_deviation          0.055022\n",
-       "31                         value__variance          0.053394\n",
-       "2                   value__quantile__q_0.4          0.047285\n",
-       "5                        value__abs_energy          0.046748\n",
-       "27                          value__maximum          0.045761\n",
-       "0                           value__minimum          0.043463\n",
-       "10                  value__quantile__q_0.8          0.041733\n",
-       "25                  value__quantile__q_0.5          0.040282\n",
-       "4                            value__median          0.039267\n",
-       "29                         value__skewness          0.037424\n",
-       "17   value__quantile__q_0.7000000000000001          0.037370\n",
-       "11                       value__sum_values          0.037204\n",
-       "28                 value__count_above_mean          0.036372\n",
-       "30                  value__quantile__q_0.6          0.036175\n",
-       "22                         value__kurtosis          0.033892\n",
-       "3                              value__mean          0.033492"
+       "15                  value__quantile__q_0.1          0.067401\n",
+       "2                   value__quantile__q_0.2          0.062246\n",
+       "21                         value__variance          0.055417\n",
+       "5   value__quantile__q_0.30000000000000004          0.054141\n",
+       "30               value__standard_deviation          0.052977\n",
+       "31                          value__minimum          0.052758\n",
+       "18                          value__maximum          0.048261\n",
+       "14                  value__quantile__q_0.4          0.044904\n",
+       "3                   value__quantile__q_0.9          0.044598\n",
+       "29                  value__quantile__q_0.8          0.043224\n",
+       "11                       value__abs_energy          0.042800\n",
+       "1                              value__mean          0.039838\n",
+       "12                       value__sum_values          0.039415\n",
+       "7                   value__quantile__q_0.5          0.038433\n",
+       "28                  value__quantile__q_0.6          0.037662\n",
+       "0                            value__median          0.037317\n",
+       "13   value__quantile__q_0.7000000000000001          0.037221\n",
+       "17                         value__skewness          0.036348\n",
+       "20                         value__kurtosis          0.035703\n",
+       "6                  value__count_above_mean          0.032605"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
