update CNN notebook

--- a/experiments/neural_nets/retina_dnn_classification.ipynb
+++ b/experiments/neural_nets/retina_dnn_classification.ipynb
@@ -32,8 +32,7 @@
     "from pathlib import Path\n",
     "from addict import Dict\n",
     "\n",
-    "sys.path.append('../../')\n",
-    "sys.path.append('/disk/neuro/sktime-dl')"
+    "sys.path.append('../../')"
    ]
   },
   {
@@ -2937,6 +2936,51 @@
     "            validation_X=Xs_test,\n",
     "            validation_y=ys_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(0.7388198757763975, 0.8036976117515376)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "source": [
+    "accuracy_score(ys_test, network.predict(Xs_test)), \\\n",
+    "roc_auc_score(ys_test, network.predict_proba(Xs_test)[:, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Model: \"model\"\n_________________________________________________________________\nLayer (type)                 Output Shape              Param #   \n=================================================================\ninput_1 (InputLayer)         [(None, 50, 1)]           0         \n_________________________________________________________________\nconv1d (Conv1D)              (None, 50, 6)             48        \n_________________________________________________________________\naverage_pooling1d (AveragePo (None, 16, 6)             0         \n_________________________________________________________________\nconv1d_1 (Conv1D)            (None, 16, 12)            516       \n_________________________________________________________________\naverage_pooling1d_1 (Average (None, 5, 12)             0         \n_________________________________________________________________\nflatten (Flatten)            (None, 60)                0         \n_________________________________________________________________\ndense (Dense)                (None, 2)                 122       \n=================================================================\nTotal params: 686\nTrainable params: 686\nNon-trainable params: 0\n_________________________________________________________________\nNone\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(network.model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
