rename and update

--- a/examples/notebooks/retina_stimulus_classification.ipynb
+++ b/examples/notebooks/retina_stimulus_classification.ipynb
@@ -55,9 +55,9 @@
     "\n",
     "from examples.utils.config import Config\n",
     "from examples.utils.dataset_adapters import retina_dataset\n",
-    "from pyspikelib import TrainNormalizeTransform, TsfreshVectorizeTransform, TsfreshFeaturePreprocessorPipeline\n",
-    "from pyspikelib.utils import simple_undersampling\n",
-    "from pyspikelib.mpladeq import prettify, beautify_mpl, boxplot\n",
+    "from spikebench import TrainNormalizeTransform, TsfreshVectorizeTransform, TsfreshFeaturePreprocessorPipeline\n",
+    "from spikebench.utils import simple_undersampling\n",
+    "from spikebench.mpladeq import prettify, beautify_mpl, boxplot\n",
     "\n",
     "beautify_mpl()"
    ]
@@ -212,8 +212,8 @@
     "\n",
     "plt.xlim(2, 14)\n",
     "\n",
-    "plt.savefig('/disk/neuro/pyspikelib/main_paper_figs/retina_spikes_histogram.pdf')\n",
-    "plt.savefig('/disk/neuro/pyspikelib/main_paper_figs/retina_spikes_histogram.eps')\n",
+    "plt.savefig('/disk/neuro/spikebench/main_paper_figs/retina_spikes_histogram.pdf')\n",
+    "plt.savefig('/disk/neuro/spikebench/main_paper_figs/retina_spikes_histogram.eps')\n",
     "\n",
     "prettify((10, 8))"
    ]
