--- a/experiments/classical_ml_ts_models/retina_pyts_algorithms.ipynb
+++ b/experiments/classical_ml_ts_models/retina_pyts_algorithms.ipynb
@@ -52,9 +52,9 @@
     "\n",
     "from examples.utils.config import Config\n",
     "from examples.utils.dataset_adapters import retina_dataset\n",
-    "from pyspikelib import TrainNormalizeTransform\n",
-    "from pyspikelib.utils import simple_undersampling\n",
-    "from pyspikelib.mpladeq import prettify, beautify_mpl, boxplot\n",
+    "from spikebench import TrainNormalizeTransform\n",
+    "from spikebench.utils import simple_undersampling\n",
+    "from spikebench.mpladeq import prettify, beautify_mpl, boxplot\n",
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from pyts.classification import BOSSVS, SAXVSM\n",
