--- a/examples/notebooks/fcx1_wake_sleep_classification.ipynb
+++ b/examples/notebooks/fcx1_wake_sleep_classification.ipynb
@@ -52,9 +52,9 @@
     "\n",
     "from examples.utils.config import Config\n",
     "from examples.utils.dataset_adapters import fcx1_dataset\n",
-    "from pyspikelib import TrainNormalizeTransform, TsfreshVectorizeTransform, TsfreshFeaturePreprocessorPipeline\n",
-    "from pyspikelib.utils import simple_undersampling\n",
-    "from pyspikelib.mpladeq import prettify, beautify_mpl, boxplot\n",
+    "from spikebench import TrainNormalizeTransform, TsfreshVectorizeTransform, TsfreshFeaturePreprocessorPipeline\n",
+    "from spikebench.utils import simple_undersampling\n",
+    "from spikebench.mpladeq import prettify, beautify_mpl, boxplot\n",
     "\n",
     "beautify_mpl()\n"
    ]
