--- a/experiments/neural_nets/retina_dnn_classification.ipynb
+++ b/experiments/neural_nets/retina_dnn_classification.ipynb
@@ -52,9 +52,9 @@
     "\n",
     "from examples.utils.config import Config\n",
     "from examples.utils.dataset_adapters import retina_dataset\n",
-    "from pyspikelib import TrainNormalizeTransform\n",
-    "from pyspikelib.utils import simple_undersampling\n",
-    "from pyspikelib.mpladeq import prettify, beautify_mpl, boxplot\n",
+    "from spikebench import TrainNormalizeTransform\n",
+    "from spikebench.utils import simple_undersampling\n",
+    "from spikebench.mpladeq import prettify, beautify_mpl, boxplot\n",
     "\n",
     "import tensorflow as tf\n",
     "import tensorflow.keras as keras\n",
@@ -191,7 +191,7 @@
     }
    ],
    "source": [
-    "from pyspikelib.utils import simple_undersampling\n",
+    "from spikebench.utils import simple_undersampling\n",
     "\n",
     "Xs_train, ys_train = simple_undersampling(\n",
     "    pd.DataFrame(X_train), y_train, subsample_size=0.9\n",
