--- a/experiments/self_supervised/fcx1_isi_shuffling_classification.ipynb
+++ b/experiments/self_supervised/fcx1_isi_shuffling_classification.ipynb
@@ -53,10 +53,10 @@
     "\n",
     "from examples.utils.config import Config\n",
     "from examples.utils.dataset_adapters import fcx1_dataset\n",
-    "from pyspikelib import TrainNormalizeTransform, TsfreshVectorizeTransform, TsfreshFeaturePreprocessorPipeline\n",
-    "from pyspikelib.utils import simple_undersampling\n",
-    "from pyspikelib.train_encoders import ISIShuffleTransform\n",
-    "from pyspikelib.mpladeq import prettify, beautify_mpl, boxplot\n",
+    "from spikebench import TrainNormalizeTransform, TsfreshVectorizeTransform, TsfreshFeaturePreprocessorPipeline\n",
+    "from spikebench.utils import simple_undersampling\n",
+    "from spikebench.train_encoders import ISIShuffleTransform\n",
+    "from spikebench.mpladeq import prettify, beautify_mpl, boxplot\n",
     "\n",
     "beautify_mpl()"
    ]
